experimental/parser/testdata/parser/range/reserved_edition.proto.stderr.txt
error: cannot use string literals in reserved range in editions mode
  --> testdata/parser/range/reserved_edition.proto:6:19
   |
 1 | edition = "2023";
   | ----------------- editions mode is specified here
...
 6 |     reserved foo, "foo";
   |                   ^^^^^
  help: replace this with an identifier
   |
 6 | -     reserved foo, "foo";
 6 | +     reserved foo, foo;
   |

encountered 1 error
